plugins
{
    id 'java'  // Java plugin
    id 'application'  // For running the application (if applicable)
}

repositories
{
    mavenCentral()  // Fetch dependencies from Maven Central
}

dependencies
{
    implementation 'org.openjfx:javafx-controls:17'
    implementation 'com.google.code.gson:gson:2.12.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
}

application
{
    mainClass = 'src.Main.MainTCC'  // main class path
}

test
{
    useJUnitPlatform()  // This ensures Gradle uses JUnit 5 to run tests
    testLogging {
        events "passed", "skipped", "failed"
    }
    // If using Java 20, make sure to specify this:
    jvmArgs = ['--enable-preview']
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(20))
    }
}

tasks.withType(JavaExec)
{
    jvmArgs =
    [
        '--module-path', 'C:/path/to/javafx-sdk-17/lib',  // Update the path to your JavaFX SDK location
        '--add-modules', 'javafx.controls,javafx.fxml'  // Add JavaFX modules you need
    ]
}

sourceSets
{
    main
    {
        java
        {
            srcDirs = ['src']  // Specify the source directory for your Java files
        }
    }
    // test
    // {
    //     java
    //     {
    //         srcDirs = ['src/test/java'] // Ensure this points to the correct test directory
    //     }
    // }
}